src/assets/scss/theme/_overlay.scss
/* ... */
.overlay-1 {
  * {
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
  }
  figcaption {
    position: absolute;
    width: 100%;
    height: 100%;
    padding: 0.75rem 1rem;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;
    opacity: 0;
    text-align: center;
  }
  .from-top {
    position: absolute;
    padding: 0.75rem 1rem;
    top: 50%;
    left: 0;
    width: 100%;
    transform: translateY(-80%);
  }
  &:hover {
    figcaption,
    .figcaption {
      opacity: 1;
    }
    figcaption *,
    .figcaption * {
      transform: translateY(-50%);
    }
  }
}
.overlay-4 {
  * {
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
  }
  figcaption {
    position: absolute;
    width: 100%;
    height: 100%;
    padding: 0.75rem 1rem;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;
    opacity: 0;
    text-align: center;
  }
  .from-top {
    position: absolute;
    padding: 0.75rem 1rem;
    top: 50%;
    left: 0;
    width: 100%;
    transform: translateY(-80%);
    i {
      @include font-size(2rem);
    }
  }
  &:hover {
    figcaption,
    .figcaption {
      opacity: 1;
    }
    figcaption *,
    .figcaption * {
      transform: translateY(-50%);
    }
  }
}
.overlay-2 {
  * {
    position: absolute;
    left: 0;
    margin: 0;
    width: 100%;
    text-align: center;
  }
  > * {
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    height: 100%;
    position: absolute;
  }
  figcaption {
    height: 100%;
    opacity: 0;
  }
  img {
    position: relative;
  }
  .from-top {
    bottom: 50%;
    padding: 0 1rem;
    transform: translate3d(0%, -100%, 0);
  }
  .from-bottom {
    top: 50%;
    padding: 0 1rem;
    transform: translate3d(0%, 100%, 0);
  }
  &:hover {
    * {
      opacity: 1;
    }
    figcaption * {
      transform: translate3d(0%, 0%, 0);
    }
  }
}
.overlay-3 {
  text-align: left;
  span.bg {
    position: absolute;
    display: block;
    width: 0;
    height: 100%;
    left: 0;
    top: 0;
    opacity: 0;
    visibility: hidden;
  }
  &:hover span.bg {
    visibility: visible;
    opacity: 0.8;
    width: 100%;
  }
  figcaption {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;
    opacity: 0;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    padding: 1rem 1.25rem;
  }
  .from-left {
    opacity: 0;
    transition: opacity 0.4s, transform 0.4s;
    transform: translate3d(-10%, 0, 0);
    &:nth-child(1) {
      transition-delay: 0.15s;
    }
    &:nth-child(2) {
      transition-delay: 0.2s;
    }
  }
  &:hover {
    figcaption,
    .figcaption {
      opacity: 1;
      .from-left {
        opacity: 1;
        transform: translate3d(0, 0, 0);
      }
    }
  }
}
.overlay-5 {
  text-align: left;
  span.bg {
    position: absolute;
    display: block;
    width: 0;
    height: 100%;
    left: 0;
    top: 0;
    opacity: 0;
    visibility: hidden;
  }
  &:hover span.bg {
    visibility: visible;
    opacity: 0.9;
    width: 100%;
  }
  figcaption {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;
    opacity: 0;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    padding: 1rem 1.25rem;
  }
  .from-left {
    opacity: 0;
    transition: opacity 0.4s, transform 0.4s;
    transform: translate3d(-10%, 0, 0);
    &:nth-child(1) {
      transition-delay: 0.15s;
    }
    &:nth-child(2) {
      transition-delay: 0.2s;
    }
  }
  &:hover {
    figcaption,
    .figcaption {
      opacity: 1;
      .from-left {
        opacity: 1;
        transform: translate3d(0, 0, 0);
      }
    }
  }
}
.hover-scale {
  overflow: hidden;
  -webkit-backface-visibility: hidden;
  -moz-backface-visibility: hidden;
  transform: translateY(0);
  img {
    transition: all 0.35s ease-in-out;
  }
  &:hover img {
    transform: scale(1.05);
  }
}
.hover-plus,
.hover-overlay {
  position: relative;
}
.hover-plus .hover-icon {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%) scale(0.9);
  width: 2.5rem;
  height: 2.5rem;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 0;
  pointer-events: none;
  font-size: calc(1.275rem + 0.3vw);
  @include transition(all 0.25s ease-in-out);
  z-index: 5;
}
.hover-overlay .hover-icon {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%) scale(0.9);
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 0;
  pointer-events: none;
  font-size: calc(1.275rem + 0.3vw);
  @include transition(all 0.25s ease-in-out);
  z-index: 5;
}
.hover-overlay .hover-icon svg,
.hover-plus .hover-icon svg {
  width: 45px;
  height: 45px;
}
@media (min-width: 1200px) {
  .hover-plus .hover-icon,
  .hover-overlay .hover-icon {
    font-size: 1rem;
  }
}
.hover-plus:hover .hover-icon,
.hover-overlay:hover .hover-icon {
  opacity: 1;
  transform: translate(-50%, -50%);
}
.hover-scale-rotate {
  @extend .hover-scale;
  &:hover img {
    transform: scale(1.3) rotate(12deg);
  }
}
.itooltip-inner {
  padding: 0.7rem 1rem;
  box-shadow: var(--shadow);
  animation: 0.15s linear fadeIn;
  border-radius: $border-radius;
  background: rgba($white, 0.9);
  box-shadow: $box-shadow;
  color: inherit;
}
.itooltip-light.itooltip-inner {
  background: rgba($white, 0.9);
  box-shadow: $box-shadow;
  color: inherit;
}
.itooltip-dark.itooltip-inner {
  background: rgba($gray-900, 0.9);
  color: var(--#{$prefix}white);
}
.itooltip-dark.itooltip-inner * {
  color: var(--#{$prefix}white);
}
.itooltip-color.itooltip-inner {
  background: rgba(var(--#{$prefix}primary-rgb), 0.9);
}
@each $color,
  $value in $text-colors {
    .itooltip-#{$color}.itooltip-inner {
      background: rgba($value, 0.9);
    }
}
/* ... */

